--- a/libft/Makefile
+++ b/libft/Makefile
@@ -22,7 +22,7 @@ LIBFT_NAME = ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdi
 			 ft_strjoin.c ft_strlcat.c ft_strlen.c ft_strmap.c ft_strmapi.c ft_strncat.c \
 			 ft_strncmp.c ft_strncpy.c ft_strnequ.c ft_strnew.c ft_strnstr.c ft_strrchr.c \
 			 ft_strsplit.c ft_strstr.c ft_strsub.c ft_strtrim.c ft_tolower.c ft_toupper.c \
-			 get_next_line.c
+			 get_next_line.c ft_tabdup.c ft_tablen.c free_tab.c
 	  
 CC = gcc
 
